# vineyard-mybot

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml  instructions.txt  map_simulation.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  robot_view.rviz  robot_view_slam.rviz  waypoints_nav2.json
description/: constants.xacro  inertial_properties.xacro  lidar.xacro  materials.xacro  mower_robot.urdf.xacro  robot_frame.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vineyard-mybot/share/vineyard-mybot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vineyard-mybot/share/vineyard-mybot/cmake/: vineyard-mybotConfig-version.cmake  vineyard-mybotConfig.cmake
install/vineyard-mybot/share/vineyard-mybot/config/: empty.yaml  my_controllers.yaml  robot_view.rviz
install/vineyard-mybot/share/vineyard-mybot/description/: constants.xacro  inertial_properties.xacro  materials.xacro  mower_robot.urdf.xacro  robot_frame.xacro  ros2_control.xacro
install/vineyard-mybot/share/vineyard-mybot/environment/: ament_prefix_path.dsv  path.dsv
install/vineyard-mybot/share/vineyard-mybot/launch/: rsp.launch.py  simulation.launch.py
launch/: rsp.launch.py  simulation.launch.py
log/: latest_build
scripts/: cmd_vel_relay.py  odom_relay.py  slam_diagnostics.py  transform_monitor.py  twist_to_twiststamped.py  waypoint_follower.py
worlds/: test_world.sdf
(+4 files in other folders)
