<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vineyard_mybot</name>
  <version>0.0.0</version>
  <description>Vineyard robot package for ROS Jazzy</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <!-- Launch dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- Gazebo dependencies -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  
  <!-- Controller dependencies -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  
  <!-- Robot description -->
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  
  <!-- Utilities -->
  <depend>ament_index_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
